Add chapter on coinage

--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -179,6 +179,33 @@ all those pursued and discriminated against by men and stands as the last realm 
 \subsection{Realms and peoples}
 This section \textit{is} concerned with politics, as well as social structures and institutions.
 
+\subsubsection{Aedirn}\label{realm:aedirn}
+Situated between \hyperref[region:mahakamMtns]{the mountains of Mahakam} to the west, \nameref{realm:kaedwen} to the north and
+\hyperref[region:blueMtns]{the Blue Mountains} to the east, \nameref{realm:aedirn} is shielded from harsh weather by the surrounding mountain
+ranges. This kind and consistant climate, along with \hyperref[region:pontar]{the Pontar Valley}, have enabled a strong agricultural economy
+to flourish. Further, the proximity to Mount Carbon has lead to the development of considerable industry in the western parts of the kingdom.
+\nameref{realm:aedirn} is ruled by king Demavend the Third.
+
+\paragraph{Key cities}
+\subparagraph{Vengerberg}\label{city:vengerberg}
+The capital city of \nameref{realm:aedirn} and in days gone by one of the richest and most populous cities in the north. In the most recent war
+with \nameref{realm:nilfgaard}, however, it was sacked, and has since only slowly begun rebuilding.
+
+\subsubsection{Kaedwen}\label{realm:kaedwen}
+The largest of the Northern Realms, \nameref{realm:kaedwen} shares borders with both \nameref{realm:redania} and \nameref{realm:aedirn}.
+The kingdom's ruler is king Henselt, who has continued the petty wars and skirmishes with \nameref{realm:aedirn} that have been occurring
+for many decades over which realm gets to control the \hyperref[region:pontar]{Pontar Valley}. To date, the region is held by \nameref{realm:aedirn}.
+
+\paragraph{Key cities}
+\subparagraph{Ard Carraigh}\label{city:ard_carraigh}
+The capital city of \nameref{realm:kaedwen}, though lesser in most ways than \nameref{city:ban_ard}.
+
+\subparagraph{Ban Ard}\label{city:ban_ard}
+Likely the most important city in \nameref{realm:kaedwen} and home to the powerful sorcerers' academy.
+
+\subsubsection{Nilfgaard}\label{realm:nilfgaard}
+...
+
 \subsubsection{Redania}\label{realm:redania}
 Ruled at the moment by king Radovid the Stern, the kingdom profits greatly from trade with the other realms of the north.
 The chief source of \nameref{realm:redania} are her export of grain to less fertile regions, though recently cheaper
@@ -216,35 +243,23 @@ however, the ancient brickwork can nowadays only be admired by anyone unfortunat
 The capital city of \nameref{realm:redania}, known mostly for the annual horse race, the ``Grand Tretorian,'' held here.
 
 
-\subsubsection{Kaedwen}\label{realm:kaedwen}
-The largest of the Northern Realms, \nameref{realm:kaedwen} shares borders with both \nameref{realm:redania} and \nameref{realm:aedirn}.
-The kingdom's ruler is king Henselt, who has continued the petty wars and skirmishes with \nameref{realm:aedirn} that have been occurring
-for many decades over which realm gets to control the \hyperref[region:pontar]{Pontar Valley}. To date, the region is held by \nameref{realm:aedirn}.
-
-\paragraph{Key cities}
-\subparagraph{Ban Ard}\label{city:ban_ard}
-Likely the most important city in \nameref{realm:kaedwen} and home to the powerful sorcerers' academy.
-
-\subparagraph{Ard Carraigh}\label{city:ard_carraigh}
-The capital city of \nameref{realm:kaedwen}, though lesser in most ways than \nameref{city:ban_ard}.
-
-\subsubsection{Aedirn}\label{realm:aedirn}
-Situated between \hyperref[region:mahakamMtns]{the mountains of Mahakam} to the west, \nameref{realm:kaedwen} to the north and
-\hyperref[region:blueMtns]{the Blue Mountains} to the east, \nameref{realm:aedirn} is shielded from harsh weather by the surrounding mountain
-ranges. This kind and consistant climate, along with \hyperref[region:pontar]{the Pontar Valley}, have enabled a strong agricultural economy
-to flourish. Further, the proximity to Mount Carbon has lead to the development of considerable industry in the western parts of the kingdom.
-\nameref{realm:aedirn} is ruled by king Demavend the Third.
-
-\paragraph{Key cities}
-\subparagraph{Vengerberg}\label{city:vengerberg}
-The capital city of \nameref{realm:aedirn} and in days gone by one of the richest and most populous cities in the north. In the most recent war
-with \nameref{realm:nilfgaard}, however, it was sacked, and has since only slowly begun rebuilding.
 
 \subsubsection{Temeria}\label{realm:temeria}
-...
+\nameref{realm:temeria} lies south of the \hyperref[region:pontar]{Pontar} and west of \nameref{realm:aedirn}. To her west lie the smaller realms of 
+Cidaris and Verden, as well as the ancient forest of \nameref{region:brokilon}. The \hyperref[realm:temeria]{Temerian} army defeated the recent 
+\hyperref[realm:nilfgaard]{Nilfgaardian} invasion and King Foltest used this success and the chaos left behind by the war
+to expand his influence over the \hyperref[region:mahakamMtns]{mountains of Mahakam} and the southern regions of Sodden and Brugge.
 
-\subsubsection{Nilfgaard}\label{realm:nilfgaard}
-...
+\paragraph{Key cities}
+\subparagraph{Gors Velen}\label{city:gors_velen}
+The city lies in a natural bay by the ocean, a little south of the \hyperref[region:pontar]{Pontar}. Thanks to it's location,
+Gors Velen is an importand northern trade centre, second only to \nameref{city:novigrad}. Considering the spot is a good one
+to put a city, it is hardly surprising that Gors Velen, too, is built upon the ruins of an older Elven city.
+
+\subparagraph{Vizima}\label{city:vizima}
+The capital city of \nameref{realm:temeria} lies beside the beautiful Lake Vizima. It is the meeting-point of many
+important trade routes and holds within it's walls the Royal Palace of the \hyperref[realm:temeria]{Temerian} Dynasty.
+
 
 \chapter{Character creation}
 In this chapter, the impact of the characters race on stats and gameplay will be described. A short and intentionally vague paragraph on starting
@@ -266,8 +281,10 @@ Elves gain one additional attribute point in REF, as well as a bonus success to 
 
 \subsection{Dopplers}
 Dopplers live a dangerous life: Should they be found out, most would burn them at the stake or try to exploit them in criminal endeavours.
-They can take the shape of any humanoid creature they have seen before, which not only makes them look practically identical but also allows the
+They can take the shape of any humanoid creature\footnote{Whose size is not too different to their own, roughly from 80cm to 280cm} they have seen before, which not only makes them look practically identical but also allows the
 doppler to use some of their skills. Any permanent markings on the body, such as scars or tattoos, will be present in any form the doppler takes.
+The doppler may not change his shape while touching silver, and cannot create silver accessories. Clothes and the like can be manifested, 
+but turn into unsightly lumps of flesh when out of contact with the doppler's body.
 \\\\
 Dopplers don't gain any points by default, but may \textit{transform}. When transformed into another character, their effective skill points in
 any skill\footnote{Explicitly not in attributes} are the average between their own and those of whoever they impersonate. They are, unless marked
@@ -285,7 +302,7 @@ when unarmed in close combat.
 Halflings, as a rule, are on better terms with humans than most other races. One possible explanation for this is that they tend to live
 in secluded farmsteads and keep out of the way of humans while supplying them with honey, roots and other agricultural commodities.
 \\\\
-Halflings may roll one extra die on \textit{aim/throw}, \textit{acrobatics} and \textit{sleight of hand} checks, and they are immune to magic
+Halflings may roll one extra die on \textit{aim/throw}, \textit{acrobatics} and \textit{sleight of hand} checks, and they are immune to magic%
 \footnote{This includes hypnosis and the like. Magic can still harm them, as, for example, while they cannot be magically set ablaze, their surroundings
 	can, and they are not immune to heat. Nor large rocks, for that matter.}. They must not exceed one attribute point in STR.
 
@@ -302,12 +319,15 @@ prior experience of The Witcher at least to participate in a campaign, some of t
 
 \subsection{Havekar}
 Smugglers who sell arms to the \nameref{profession:scoiatael}, some out of sympathy but most out of greed. They are scarcely less hated than the ones they supply,
-and slightingly named Hawkers by their enemies.
+and slightingly named Hawkers by their enemies. Their equipment need not differ greatly\footnote{Or even at all} from that of other men of similar
+wealth, which, in turn, could reasonably range from 3 to 5.
 
 \subsection{Scoia'tael}\label{profession:scoiatael}
 Guerrilla fighters in league with \nameref{realm:nilfgaard}, they joined the second northern war to fight for a free country of non-humans.
 They are mostly elves and dwarves, but some halflings have also joined the ranks. Even now, in times of peace, they continue to harass the
-unwary, turning more and more into terrorists. Men call them Squirrels and pay good money for their heads.
+unwary, turning more and more into terrorists. Men call them Squirrels and pay good money for their heads. High-ranking Scoia'tael are
+likely to wield a \hyperref[weapon:gwyhir]{Gwyhir}, but light armour, sword and bow are likely part of any Guerilla's equipment.
+They should not start out with wealth above the equivalent of two commerce points.
 
 \section{Witchers}
 Since being a Witcher determines both one's profession and genetic makeup, they will be treated separately from all other types of character. Quite appropriately,
@@ -318,7 +338,7 @@ made to combat. They are generally tolerated, however, much in the way that whal
 jobs have to be done by someone. It is also commonly accepted that the mutations Witchers undergo rob them of any emotions. Their eyes are like
 those of a cat, and by this, they can be told from regular humans, if the two swords did not already give the game away.
 \\\\
-Witchers gain one additional attribute point to be spent on either STR or REF. Their vocation is \textit{Witcher}
+Witchers gain one additional attribute point to be spent on either STR or REF. Their vocation is \textit{Witcher}%
 \footnote{This vocation can be used to assist in most perception checks, as it includes the Witchers' senses.
 	It also includes herblore, knowledge about monsters and all things part of the profession}
 , and they must put at least two skill points into this vocation, as well as one skill point each into proficiency with longsword
@@ -326,6 +346,40 @@ and \hyperref[rule:signs]{signs}. Witchers needn't make any dice rolls to determ
 \\\\
 Starting wealth will typically range from 1 to 3. The Witcher will likely be equipped with light or medium armor, a steel and a silver
 longsword and perhaps one or two potions.
+
+\subsection{Witcher schools}
+In the hay-day of witcherdom, several schools for training the next generation of witchers were strewn across the land.
+These days, however, their fortresses lie are ruined and desolate, the once-great schools reduced to a handful of vagabonds
+and the secrets of the mutations all but forgotten. Still the roving witchers are associated with their respective schools
+by the shape of their medallions, a stylized head of the animal that gave the school it's name.
+
+\paragraph{School of the Bear:}
+The first school to split off from the more ancient Order of Witchers established their base in the Amell Mountains by \nameref{realm:cintra}
+After failing to rid the area of a cabal of vampires, the local villager's frustration boiled over and the witchers,
+feeling no great loyalty to their school or each other, dissolved the school and abandoned the fortress. It is supposed
+that some of the former bears still rest there from time to time, though the castle has long lain in ruin.
+
+\paragraph{School of the Cat:}
+After an internal conflict which destroyed their castle in the south, the rag-tag leftovers formed into the Dyn Marv Caravan and embraced nomadship.
+They hired themselves out to anyone for any job, so long as the pay was good. Like the Wolves, they were betrayed and nearly
+destroyed by king Radowit II. in an attempt to secure his power.
+
+\paragraph{School of the Griffin:}
+The School of the Griffin most closely retains the code of the ancient Order of Witchers that predated all the schools:
+Alongside swordcraft and alchemy, young Griffins are educated in etiquette. Their castle was Kaer Seren in Kovir, but it was
+badly damaged in a feud with envious mages who summoned a landslide in the mountains above it. Griffins, unlike all other
+witchers, are not averse to slaying dragons.
+
+\paragraph{School of the Viper:}
+The Vipers split from the School of the Bear soon after its foundation and moved south, into \nameref{realm:nilfgaard}.
+They accepted contracts on humans as well as monsters, though their purpose was another: to defeat the Wild Hunt.
+When they refused to enter the service of the Usurper, he ordered his armies to destroy their keep, scattering the students.
+They have since been banned from entering any city large enough to control this edict.
+
+\paragraph{School of the Wolf:}
+Once occupying the fortress of Kaer Morhen in the \nameref{region:blueMtns}, the Wolves fell victim to a pogrom roused by
+mages and priests that destroyed their home and their order. Now the keep only serves as a place for the last remnants of 
+the school to winter.
 
 \chapter{Magic system}
 \section{Witcher signs}\label{rule:signs}
@@ -382,8 +436,8 @@ after his third.
 Penalties for repeated incompatability may be issued as seems fit.
 \\[2ex]
 \subparagraph{Rarity of ingredients:}
-The rarity of ingredients determines the challenge level on a survival check on finding them in the wild
-\footnote{Though, of course, depending on ones surroundings, penalties or boni may be issued}.
+The rarity of ingredients determines the challenge level on a survival check on finding them in the wild%
+\footnote{Though, of course, depending on one's surroundings, penalties or boni may be issued}.
 It should also inform the availability and cost when attempting to purchase them.
 
 \subsection{Black blood}
@@ -411,6 +465,87 @@ Rarity of ingredients: 4
 Cancels the effects of all other potions and removes any poisoning caused by potions.
 \\[2ex]
 Rarity of ingredients: 3
+
+\section{Runes}
+Weapons and armor may be inlaid with runes by some skilfull craftsmen. These provide minor boni.
+
+\chapter{Special items}
+\section{Weapons}
+These are some particular weapons which, technically, fall into one of the categories of the Cogent rule book,
+but receive superior stats to reflect their renown within the world.
+
+	\weapon[weapon:gwyhir]{Gwyhir}{Forged by cunning gnomes in the deep smithies of Mount Carbon, These swords
+	are widely considered the best to be bought for money.}{3}{3}
+
+\chapter{Detailed currencies}
+Since haggling can be quite fun, and makes much more sense when playing with actual numbers than with commerce points%
+\footnote{Raising the reward for taking care of some monster from the price of a sword to the price of a house, for instance,
+is rather unrealistic},
+here is a proposal for a more detailed financial system. To make it more realistic (and true to the games), different nations
+will use different coinage, so travel may well include some measure of exchanging one currency to another. For the player's 
+convenience, the narrator may simply pick the coinage they like best and pretend it were universal.
+\\[2ex]
+Since there is already some level of complexity within each currency, it may be most convenient to simply split one's
+wealth into copper, silver and gold coins as is usual elsewhere and keep in mind the conversions between the metals.
+If one currency is to be converted to another, different rates may be applied to different metals, so one should not simply
+add a silver coin if one has gained the appropriate number of coppers - an actual exchange is needed. Additionally,
+coins have weight. The narrator may apply penalties for carrying to many coins, so higher denominations can be important
+if large purchases are to be made.
+\\[2ex]
+I want to be very clear about the fact that the coins listed below were, aside from the three well-known ones, invented
+or at least introduced to the world of the Witcher by me. They are not canon and may, in some cases, even conflict
+with the canon, but I have taken the liberty to create systems of coinage which I find at least credible both within
+the context of the Witcher and without it. My hope is that asking for two trees will be more immersive than asking 
+for twenty copper-pieces, and also that the handful of names necessary to play in one location are not too many to 
+remember. 
+
+\section{\hyperref[realm:temeria]{Temerian} coinage}
+The most well-known \hyperref[realm:temeria]{Temerian} coin is doubtlessly the crown. Making this the \textit{only} 
+\hyperref[realm:temeria]{Temerian} coin, however, would be blatantly ignorant of actual systems of currenty as well 
+as simple practicality. Here, then, is the full system:
+
+\begin{itemize}
+	\item \textbf{Studs:} Small copper coins, named in times long past after the studs on the crown of Temeria. 
+		  Their original name no one now recalls. Four studs will buy a hot meal or a bed in an inn for a night.
+	\item \textbf{Trees:} Large copper coins, named after the large tree-shapes on the crown of Temeria. Trees are
+		  the value and weight of ten studs.
+	\item \textbf{Crowns:} Small silver coins, valued at 60 studs. A crown's worth of studs weighs precisely half
+		  a \hyperref[realm:temeria]{Temerian} pound. Expensive swords may cost around one crown, perhaps more if made by renowned craftsmen or decorated lavishly.
+	\item \textbf{Towers:} Silver coins the weight and value of 24 crowns, named for the depiction of \nameref{city:vizima}'s 
+		  chief gate impressed on them, on which a tower features prominently.
+	\item \textbf{Royal crowns:} Small gold coins, valued at 120 crowns. Officially, they are called eagles, but since for
+		  a long time only nobility dealt in large enough sums to need these, they were commonly called  `Nobleman's crowns',
+		  `King's crowns' or `royal crowns'. The latter name stuck.
+\end{itemize}
+
+\section{\hyperref[realm:redania]{Redanian} coinage}
+What the crown is for \nameref{realm:temeria}, the oren is for \nameref{realm:redania}. For the reasons explained above,
+here is a more detailed set of denominations.
+
+\begin{itemize}
+	\item \textbf{Pennies:} Small copper coins, of similar value to the Temerian studs\footnote{Conversion rates may differ and change, of course}.
+	\item \textbf{Guinnies:} Medium sized copper coins. They are the exact weight and value of 12 pennies.
+	\item \textbf{Hierarchs:} Large copper coins, first commissioned by a hierach of \hyperref[city:novigrad]{Novigrad} to
+		  be the precise weight and value of 36 pence.
+	\item \textbf{Orens:} Medium sized silver coins, valued at 240 pence. An oren's worth of pennies weighs precisely one
+	      \hyperref[realm:redania]{Redanian} pound.
+	\item \textbf{Barges:} Small gold coin with an impression of a trade ship, commissioned by the \hyperref[city:novigrad]{Novigrad}
+		  city council to celebrate their new-found wealth soon after the city gained independence. A barge is valued at 24 orens.
+\end{itemize}
+
+\section{\hyperref[realm:nilfgaard]{Nilfgaardian} coinage}
+The `\hyperref[realm:nilfgaard]{Nilfgaardian} crown' is the floren. Below is a list of further coins.
+
+\begin{itemize}
+	\item \textbf{Silans:} Very small copper coins of about half the weight and purchasing power of the \hyperref[realm:temeria]{Temerian}
+		  stud. 
+	\item \textbf{Deniers:} Small copper coins. They are the exact weight and value of 4 Silans.
+	\item \textbf{Petalens:} Large copper coins. They are the exact weight and value of 100 Silans.
+	\item \textbf{Florens:} Medium sized silver coins, valued at 500 Silans. A Floren's worth of Silans weighs
+		  precisely 500 \hyperref[realm:nilfgaard]{Nilfgaardian} grams.
+	\item \textbf{Usurper's gold:} Very small gold coins with an impression of the Usurper's face. Valued at 20 Florens.
+	\item \textbf{Suns:} Small gold coins, valued at 50 Florens.
+\end{itemize}
 
 \chapter{Additional combat modifiers}
 
@@ -465,6 +600,19 @@ man\footnote{Or a woman, for that matter} with a sword, but they tend to come in
 \subparagraph{Stats:}
 0-1 STR, 0-2 REF, 0-1 Claw'n'Maw (proficiency)
 
+\section{Humanoids}
+These are the various monsters of human shape prowling the world.
+
+\subsection{Harpies}
+Roughly Halfling-sized, feathered creatures, chiefly found in areas with rough cliffs.
+
+\subparagraph{Stats:}
+(-1)-0 STR, 1-2 REF, 0-1 Claw'n'Maw (proficiency)
+
+\subsubsection{Abilities}
+
+\abilityfull{fly:humanoid}
+
 \section{Necrophages}
 Here are listed the manifold corpse-eaters plagueing the war-torn areas of the North. Whereever there
 are corpses unburied, one can be sure to come across a handful of these truly unsanitory creatures.
@@ -481,7 +629,7 @@ Injuries dealt by non-silver weapons are halved.
 
 \subsubsection{Abilities}
 
-\abilityfull{selfdetonationrotfiend}
+\abilityfull{selfdetonation:rotfiend}
 
 \section{Spectres}\label{monster:spectre}
 This section contains all those incorporeal beings whose origins can be found in the deceased. They cannot be
