--- a/abilities.tex
+++ b/abilities.tex
@@ -22,11 +22,21 @@
     to reappear once the last copy is taken out.
 }
 
-\defineability{selfdetonationrotfiend}{Self-detonation (Rotfiends)}
+\defineability{selfdetonation:rotfiend}{Self-detonation (Rotfiends)}
 {
     The rotfiend begins to swell and wriggle. After one turn of combat, any combattant standing next to
     the creature without cover receives an injury (greater the closer) and is poisoned. If they are not
     treated within a day, grave illness and even death may ensue. This ability is always triggered once
     the injuries dealt to the Rotfiend reduce its combat roll to a third of its original or if it receives
     a level 4 injury.
+}
+
+\defineability{fly:humanoid}{Fly}
+{
+    The creature can fly for several minutes or even hours at a time. While flying, any melee attack gains \textit{charge}, 
+    however, it takes at least one turn of combat to circle around for the next swoop. If any injury is inflicted upon a 
+    flying creature, it is staggered or tripped,
+    it will fall for at least one turn of combat. If it reaches the ground in that time, it will take damage as appropriate,
+    but certainly receive the \textit{prone} combat-modifier. To take off, the creature must not receive any damage
+    or attack for one turn of combat, this may be attempted in a defensive action.
 }
