Update and extend section on realms
Changes to internal management

--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -59,6 +59,7 @@
 \makeatletter
 
 \input{abilities.tex}
+\input{realms.tex}
 
 \maketitle
 \setcounter{tocdepth}{1}
@@ -179,87 +180,19 @@ all those pursued and discriminated against by men and stands as the last realm 
 \subsection{Realms and peoples}
 This section \textit{is} concerned with politics, as well as social structures and institutions.
 
-\subsubsection{Aedirn}\label{realm:aedirn}
-Situated between \hyperref[region:mahakamMtns]{the mountains of Mahakam} to the west, \nameref{realm:kaedwen} to the north and
-\hyperref[region:blueMtns]{the Blue Mountains} to the east, \nameref{realm:aedirn} is shielded from harsh weather by the surrounding mountain
-ranges. This kind and consistant climate, along with \hyperref[region:pontar]{the Pontar Valley}, have enabled a strong agricultural economy
-to flourish. Further, the proximity to Mount Carbon has lead to the development of considerable industry in the western parts of the kingdom.
-\nameref{realm:aedirn} is ruled by king Demavend the Third.
+\printrealm{aedirn}
 
-\paragraph{Key cities}
-\subparagraph{Vengerberg}\label{city:vengerberg}
-The capital city of \nameref{realm:aedirn} and in days gone by one of the richest and most populous cities in the north. In the most recent war
-with \nameref{realm:nilfgaard}, however, it was sacked, and has since only slowly begun rebuilding.
+\printrealm{cintra}
 
-\subsubsection{Kaedwen}\label{realm:kaedwen}
-The largest of the Northern Realms, \nameref{realm:kaedwen} shares borders with both \nameref{realm:redania} and \nameref{realm:aedirn}.
-The kingdom's ruler is king Henselt, who has continued the petty wars and skirmishes with \nameref{realm:aedirn} that have been occurring
-for many decades over which realm gets to control the \hyperref[region:pontar]{Pontar Valley}. To date, the region is held by \nameref{realm:aedirn}.
+\printrealm{kaedwen}
 
-\paragraph{Key cities}
-\subparagraph{Ard Carraigh}\label{city:ard_carraigh}
-The capital city of \nameref{realm:kaedwen}, though lesser in most ways than \nameref{city:ban_ard}.
+\printrealm{nilfgaard}
 
-\subparagraph{Ban Ard}\label{city:ban_ard}
-Likely the most important city in \nameref{realm:kaedwen} and home to the powerful sorcerers' academy.
+\printrealm{redania}
 
-\subsubsection{Nilfgaard}\label{realm:nilfgaard}
-...
+\printrealm{temeria}
 
-\subsubsection{Redania}\label{realm:redania}
-Ruled at the moment by king Radovid the Stern, the kingdom profits greatly from trade with the other realms of the north.
-The chief source of \nameref{realm:redania} are her export of grain to less fertile regions, though recently cheaper
-imports from \nameref{realm:nilfgaard} have begun threatening this key factor of the Redanian economy.
-\nameref{realm:redania} stands in a long tradition of war with \nameref{realm:temeria}, however, the two kingdoms have
-grown closer during the reign of Radovid.
-
-\paragraph{Key cities}
-\subparagraph{The Free City of Novigrad}\label{city:novigrad}
-Although geographically part of \nameref{realm:redania}, the city of \hyperref[city:novigrad]{Novigrad} is not ruled by Radovid but rather self-gouverned.
-She has by trade become the richest city of the north, a success due largely to her haven - one of the greatest on the entire continent.
-
-The Church of the Eternal Fire has an influence greater than anywhere else in the \hyperref[city:novigrad]{Free City}, its greatest temple towers over the city atop a sheer cliff.
-Hence it is an unfortunate truth that nowhere else can such animosity towards non-humans be found, and witch-hunts are a gruesome factor of life in \hyperref[city:novigrad]{Novigrad}.
-
-Officially, the Free City is gouverned by a city council, but in fact all real power rests in the hands of four criminal organizations:
-\begin{itemize}
-	\item Whoreson Junior's gang, involved in gambling and brothels and the like. They are, as a rule, despised even by their peers.
-	\item Sigi Reuven's gang, lead by the former redanian agent Sigismund Dijkstra, mostly lurks in the shadows of the town.
-	      How exactly they make ends meet is unknown, however the assumption that it is connected to clandestine activities of some sort
-	      is quite obious.
-	\item The inhabitants of the secret street aptly named ``the Putrid Grove'' led by Francis Bedlam, the ``King of Beggars''.
-	      The group consists mostly of thieves and beggars who find refuge and pawn shops in their home street.
-	\item Cleaver's gang mostly consists of dwarves, quite sensibly, as Cleaver himself is a dwarf. It specializes on thuggery of all
-	      kinds and practically amounts to a small army.
-\end{itemize}
-
-\subparagraph{Oxenfurt}\label{city:oxenfurt}
-A small town by comparison, with its centre situated on an island in the \hyperref[region:pontar]{Pontar}. It is well renowned for it's academy
-which supports the natural sciences and almost entirely fills the cities centre, either directly with its large campus, or indirectly
-with pubs and similar establishments frequented by students and teachers alike. The town was built upon the ruins of an elven settlement,
-however, the ancient brickwork can nowadays only be admired by anyone unfortunate enough to find their way into the sewers.
-
-\subparagraph{Tretogor}\label{city:tretogor}
-The capital city of \nameref{realm:redania}, known mostly for the annual horse race, the ``Grand Tretorian,'' held here.
-
-
-
-\subsubsection{Temeria}\label{realm:temeria}
-\nameref{realm:temeria} lies south of the \hyperref[region:pontar]{Pontar} and west of \nameref{realm:aedirn}. To her west lie the smaller realms of 
-Cidaris and Verden, as well as the ancient forest of \nameref{region:brokilon}. The \hyperref[realm:temeria]{Temerian} army defeated the recent 
-\hyperref[realm:nilfgaard]{Nilfgaardian} invasion and King Foltest used this success and the chaos left behind by the war
-to expand his influence over the \hyperref[region:mahakamMtns]{mountains of Mahakam} and the southern regions of Sodden and Brugge.
-
-\paragraph{Key cities}
-\subparagraph{Gors Velen}\label{city:gors_velen}
-The city lies in a natural bay by the ocean, a little south of the \hyperref[region:pontar]{Pontar}. Thanks to it's location,
-Gors Velen is an importand northern trade centre, second only to \nameref{city:novigrad}. Considering the spot is a good one
-to put a city, it is hardly surprising that Gors Velen, too, is built upon the ruins of an older Elven city.
-
-\subparagraph{Vizima}\label{city:vizima}
-The capital city of \nameref{realm:temeria} lies beside the beautiful Lake Vizima. It is the meeting-point of many
-important trade routes and holds within it's walls the Royal Palace of the \hyperref[realm:temeria]{Temerian} Dynasty.
-
+\printrealm{toussaint}
 
 \chapter{Character creation}
 In this chapter, the impact of the characters race on stats and gameplay will be described. A short and intentionally vague paragraph on starting
